--- a/views/info.erb
+++ b/views/info.erb
@@ -6,5 +6,5 @@
       <body>
           <h1>Info Page</h1>
           <p> This is the info page: here's some information about me!</p>
-        </body>
-      </hntl>
+      </body>
+  </html>
